--- a/package.json
+++ b/package.json
@@ -37,15 +37,19 @@
     "react": "~15.2.0",
     "react-dom": "~15.2.0",
     "react-native": "^0.29.0",
+    "react-native-animatable": "^0.6.1",
+    "react-native-fit-image": "^1.3.3",
     "react-native-image-picker": "^0.21.5",
     "react-native-lock": "futurice/react-native-lock#feature/customizedTheme",
+    "react-native-pull-to-refresh": "^2.0.0",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
-    "standard-http-error": "^2.0.0"
+    "standard-http-error": "^2.0.0",
+    "string": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
