--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'test01'
 
 include ':app'
+include ':react-native-image-resizer'
+project(':react-native-image-resizer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-resizer/android')
 include ':react-native-lock'
 project(':react-native-lock').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-lock/android')
