--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-animatable": "^0.6.1",
     "react-native-fit-image": "^1.3.3",
     "react-native-image-picker": "^0.21.5",
+    "react-native-image-resizer": "0.0.7",
     "react-native-lock": "futurice/react-native-lock#feature/customizedTheme",
     "react-native-pull-to-refresh": "^2.0.0",
     "react-redux": "^4.4.5",
