--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.0",
     "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^3.3.2",
     "redux-thunk": "^2.0.1",
     "standard-http-error": "^2.0.0",
     "string": "^3.3.1"
