--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     compile project(':react-native-image-resizer')
     compile project(':react-native-lock')
     compile fileTree(dir: "libs", include: ["*.jar"])
