--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = 'test01'
 
 include ':app'
+
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(settingsDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-image-resizer'
 project(':react-native-image-resizer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-resizer/android')
 include ':react-native-lock'
