--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,10 +1,12 @@
 rootProject.name = 'test01'
 
 include ':app'
-
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(settingsDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-image-resizer'
-project(':react-native-image-resizer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-resizer/android')
+project(':react-native-image-resizer').projectDir = new File(settingsDir, '../node_modules/react-native-image-resizer/android')
 include ':react-native-lock'
-project(':react-native-lock').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-lock/android')
+project(':react-native-lock').projectDir = new File(settingsDir, '../node_modules/react-native-lock/android')
+//rootProject.projectDir
