--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "^0.29.0",
     "react-native-animatable": "^0.6.1",
     "react-native-fit-image": "^1.3.3",
+    "react-native-fs": "^2.0.1-rc.2",
     "react-native-image-picker": "^0.21.5",
     "react-native-image-resizer": "0.0.7",
     "react-native-lock": "futurice/react-native-lock#feature/customizedTheme",
